# rust-py-template

./: .gitignore  Cargo.toml  README.md  pyproject.toml
python/rpy/: __init__.py  utils.py
src/: lib.rs
tests/: pytest.ini  test_fib.py
